[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "leidenalg"
authors = [
    {name = "V.A. Traag", email = "vincent@traag.net"},
]
description = "Leiden is a general algorithm for methods of community detection in large networks."
readme = "README.rst"
requires-python = ">=3.7"
keywords=[
    "graph",
    "network",
    "community detection",
    "clustering"
    ]
license = {text = "GPLv3+"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology"
]
dependencies = [
    "igraph >= 0.10.0,< 0.12",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/leidenalg/version.py"
